chore: adiciona descrição de projetos

--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
             <h2>Encontre-me também nas redes sociais</h2>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/in/kelianecavalcante/" target="_blank"><img
-                            src="assets/linkedin.svg" alt="Linkedin" /></a>
+                    <a href="https://www.linkedin.com/in/kelianecavalcante/" target="_blank">
+                        <img src="assets/linkedin.svg" alt="Linkedin" /></a>
                 </li>
                 <li>
-                    <a href="https://github.com/kelianecavalcante" target="_blank"><img src="assets/github.svg"
-                            alt="Github" /></a>
+                    <a href="https://github.com/kelianecavalcante" target="_blank">
+                        <img src="assets/github.svg" alt="Github" /></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/kelianecavalcante/" target="_blank"><img
-                            src="assets/instagram.svg" alt="Instagram" /></a>
+                    <a href="https://www.instagram.com/kelianecavalcante/" target="_blank">
+                        <img src="assets/instagram.svg" alt="Instagram" /></a>
                 </li>
             </ul>
         </div>
@@ -163,7 +163,7 @@
         <div class="projects__content">
             <h2 class="secondary-title">Projetos em Destaque</h2>
             <p>
-                Descrição da seção..
+                Alguns dos projetos desenvolvidos ou em andamento que contribuíram para o meu desenvolvimento
             </p>
         </div>
         <ul>
@@ -173,12 +173,16 @@
                 </div>
                 <div class="projects__info">
                     <h3 class="tertiary-title">
-                        Sistema de gerenciamento de tarefas DEF
+                        CRUD - Cadastro de Livros
                     </h3>
                     <p>
-                        Texto falando sobre projeto..
+                        Desenvolvimento de um sistema web <b>CRUD</b> para realizar o cadastro, listagem, edição e exclusão
+                        de livros em uma base de dados <b>MySQL</b>. Utilizando o framework da linguagem de programação
+                        <b>PHP, Laravel e aplicando o padrão MVC (model, view, controller).</b> 
                     </p>
-                    <a href="#">Leia mais &rarr;</a>
+                    <a href="https://github.com/kelianecavalcante/crud_cadastroLivros" target="_blank" class="btn btn-primary">Acessar</a>
+ 
+                    
                 </div>
             </li>
             <li class="projects__reversed-list">
@@ -187,37 +191,77 @@
                 </div>
                 <div class="projects__info">
                     <h3 class="tertiary-title">
-                        Desenvolvimento de Loja Virtual MeuSofazim.com
+                        Sistema de Gerenciamento Financeiro
                     </h3>
                     <p>
-                        Texto falando sobre projeto..
+                        Projeto desenvolvido com o objetivo de otimizar o gerenciamento de ganhos e gastos, permitindo o
+                        registro de todas as entradas e saídas de forma organizada.
+                        Desenvolvido a partir de tutorial disponibilizado pelo Youtube, canal devchallenge.
+                        Utilizando de tecnologias como:<br> <b>Javascript, React JS e Styled-components.</b>
                     </p>
-                    <a href="#">Leia mais &rarr;</a>
+                    <a href="https://github.com/kelianecavalcante/sistema-gerenciador-financeiro" target="_blank" class="btn btn-primary">Acessar</a>
+                    
                 </div>
             </li>
             <li>
+                <div class="image">
+                    <img src="assets/ecommerce.png" alt="ecommerce" />
+                </div>
+                <div class="projects__info">
+                    <h3 class="tertiary-title">
+                        Rastreador de hábitos
+                    </h3>
+                    <p>
+                        Habits tracker é um projeto desenvolvido durante o evento NLW Rocketseat 2023, com ele é
+                        possível o usuario registrar e acompanhar os seus principais hábitos diários.
+                        tecnologias utilizadas: <b>HTML, CSS, JavaScript</b> 
+                    </p>
+                    <a href="https://kelianecavalcante.github.io/nlw-setup/" target="_blank" class="btn btn-primary">Acessar</a>
+                </div>
+            </li>
+            <li class="projects__reversed-list">
                 <div class="image">
                     <img src="assets/delivery.png" alt="delivery" />
                 </div>
                 <div class="projects__info">
                     <h3 class="tertiary-title">
-                        App de delivery e Dashboard DeliveryJá!
+                        Dashboard de vendas
                     </h3>
                     <p>
-                        Texto falando sobre projeto..
+                        Esta aplicação consiste em exibir um dashboard a partir de dados fornecidos por um back end
+                        construído com Spring Boot. Elaborado durante o evento Semana Spring React, oferecido pela
+                        DevSuperior. Criamos juntos um aplicativo web completo, utilizando <b>Spring Boot no back-end, e
+                        ReactJS no front-end.</b>
                     </p>
-                    <a href="#">Leia mais &rarr;</a>
+                    <a href="https://dsvendas-keliane.netlify.app/" target="_blank" class="btn btn-primary">Acessar</a>
                 </div>
             </li>
+            <li>
+                <div class="image">
+                    <img src="assets/ecommerce.png" alt="ecommerce" />
+                </div>
+                <div class="projects__info">
+                    <h3 class="tertiary-title">
+                        Copia da página inicial do Orkut
+                    </h3>
+                    <p>
+                        O projeto é uma versão do Orkut, criado com <b>React, styled-components e Next.js.</b> Foi
+                        desenvolvido como um projeto de front-end durante a Imersão React da Alura, utilizando o
+                        React como principal ferramenta
+                    </p>
+                    <a href="https://alurakut-eight-ashen.vercel.app/" target="_blank" class="btn btn-primary">Acessar</a>
+                </div>
+            </li>
+
         </ul>
     </section>
 
     <!-- Footer -->
     <footer id="footer">
         <div class="footer__content max-width mb-0">
-            <h2 class="tertiary-title mb-s">Vamos conversar?</h2>
+            <h2 class="tertiary-title mb-s">Redes Sociais</h2>
             <p class="mb-m">
-                Você pode me encontrar pelos seguintes links abaixo
+                Aqui estão algumas das redes sociais em que você pode me encontrar!
             </p>
             <ul>
                 <li>
