fix: corrige informações pessoais

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
             <h1>Keliane Cavalcante</h1>
             <h2>Desenvolvedora Front end</h2>
             <p>
-                Olá, por meio deste portfólio, busco apresentar-me de forma breve e compartilhar um
+                Por meio deste portfólio, busco apresentar-me de forma breve e compartilhar um
                 pouco da minha trajetória no desenvolvimento de sistemas
             </p>
-            <a href="#about" class="btn btn-primary"><i class="fas fa-download"></i> Currículo</a>
+            <a href="https://drive.google.com/file/d/1H-2xhBnHt9XS7R0W-cF6_tiRxYuumOgA/view?usp=sharing" class="btn btn-primary" target="_blank"><i class="fas fa-download"></i> Currículo</a>
         </div>
         <div class="header__right">
             <div class="header__image">
@@ -85,14 +85,18 @@
                 Sobre mim
             </h2>
             <p>
-                Meu nome é Keliane Cavalcante dos Santos, sou graduada em Sistemas de Informação
-                pela Universidade Federal de Rondonópolis (UFR-MT) e atualmente estou cursando pós-graduação
-                em Projetos de Aplicativos Móveis Multiplataforma no Descomplica Faculdade Digital.
-                <!-- Profissionalmente, atuo como Desenvolvedora de Software em uma empresa especializada
-                no desenvolvimento de softwares ERP sob encomenda. -->
-                Estou em constante busca por aprendizado e crescimento profissional.
-                Meu objetivo é contribuir para a criação de soluções tecnológicas que resolvam problemas
-                reais e agreguem valor aos usuários.
+                Olá a todos!
+                Meu nome é Keliane, mas podem me chamar de Keli.
+                Em meu tempo livre, gosto de aproveitar a companhia da minha família, assistir séries, ler livros, 
+                viajar, dentre outras atividades. Sou graduada em Sistemas de Informação pela Universidade Federal de 
+                Rondonópolis e atualmente, estou investindo no meu crescimento profissional cursando pós-graduação em 
+                Desenvolvimento Full Stack na Descomplica Faculdade Digital.
+                
+                Acredito que a inovação e o aprendizado contínuo são essenciais para criar soluções tecnológicas que 
+                realmente façam a diferença na vida das pessoas. Dessa forma, meu objetivo é contribuir para a criação 
+                de soluções tecnológicas que resolvam problemas reais e agreguem valor aos usuários. Quero fazer parte 
+                de projetos significativos que impulsionem a transformação digital e tragam benefícios tangíveis para a 
+                sociedade.
             </p>
             <p>
                 Estou entusiasmada em enfrentar novos desafios e contribuir com as minhas habilidades
@@ -115,20 +119,10 @@
                         <img src="assets/notebook.png" alt="Desenvolvimento Web" />
                     </div>
                     <h3>Atuação profissional</h3>
-                    <p>
-                        Nome empresa: Sogg Software <br>
-                        Cargo ocupado: Desenvolvedora de Software
-                        Tempo de atuação: 1 ano e 6 meses <br>
-                        Sobre: A empresa é especializada no desenvolvimento de softwares ERP sob encomenda
-                        <!-- Atividades que desempenho:
-                   <ul style="list-style-type: disc;">
-                        <li>Desenvolvimento de interfaces em PHP, HTML, CSS, Javascript e Adianti Framework</li>
-                        <li>Manutenção de códigos</li>
-                        <li>Eventual chamado de suporte</li>
-                        <li>Upgrade de atividades burocráticas</li>
-                        <li>Otimização ao software de suporte interno</li>
-                        <li>Dentre outras demandas...</li>
-                    </ul> -->
+                    <p> Empresa: Sogg Solucoes em Desenvolvimentos.<br>
+                        Cargo: Programador de Sistemas de Informação.
+                        Atividades que desempenho: Desenvolvimento e manutenção de códigos,
+                        otimização ao software de suporte interno, dentre outras demandas.
                     </p>
                 </li>
                 <li class="skills__item">
@@ -137,9 +131,8 @@
                     </div>
                     <h3>Formação acadêmica</h3>
                     <p>
-                        Sou formada em Sistemas de Informação bacharelado pela Universidade Federal de Rondonópolis
-                        (UFR - MT), e atualmente estou cursando pós-graduação em Projetos de Aplicativos
-                        Móveis Multiplataforma no Descomplica Faculdade Digital
+                        Graduação completa em Sistemas de Informação pela Universidade Federal de Rondonópolis,
+                        e atualmente estou cursando Desenvolvimento Full Stack no Descomplica Faculdade Digital.
                     </p>
                 </li>
                 <li class="skills__item">
@@ -149,7 +142,7 @@
                     <h3>Algumas das tecnologias que tenho experiência</h3>
                     <p>
                         PHP - HTML5 - CSS3 - JavaScript - Adianti Framework - MySQL - Phinx - Docker - Docker-compose -
-                        Bootstrap - Controle de versionamento Git - Laravel - React - React Native
+                        Bootstrap - Controle de versionamento Git - Laravel - React - React Native.
                     </p>
                 </li>
             </ul>
@@ -215,8 +208,8 @@
                     </h3>
                     <p>
                         Habits tracker é um projeto desenvolvido durante o evento NLW Rocketseat 2023, com ele é
-                        possível o usuario registrar e acompanhar os seus principais hábitos diários.
-                        tecnologias utilizadas: <b>HTML, CSS, JavaScript</b>
+                        possível o usuário registrar e acompanhar os seus principais hábitos diários.
+                        tecnologias utilizadas: <b>HTML, CSS, JavaScript.</b>
                     </p>
                     <a href="https://kelianecavalcante.github.io/nlw-setup/" target="_blank" class="btn btn-primary">
                         <i class="fas fa-eye"></i>Visualizar
@@ -257,7 +250,7 @@
                         Cópia da página inicial do Orkut
                     </h3>
                     <p>
-                        O projeto é uma versão do Orkut, criado com <b>React, styled-components e Next.js.</b> Foi
+                        O projeto é uma versão do Orkut, criado com <b>React, Styled-components e Next.js.</b> Foi
                         desenvolvido como um projeto de front end durante a Imersão React da Alura, utilizando o
                         React como principal ferramenta
                     </p>
@@ -267,6 +260,16 @@
                     <a href="https://github.com/kelianecavalcante/alurakut" target="_blank" class="btn btn-primary">
                         <i class="fab fa-github"></i> Código fonte
                     </a>
+                </div>
+            </li>
+            <li class="projects__reversed-list">
+                <div class="image">
+                    <img src="assets/projetos.png" alt="next" />
+                </div>
+                <div class="projects__info">
+                    <h3 class="tertiary-title">
+                        Próximo projeto
+                    </h3>
                 </div>
             </li>
         </ul>
